[gd_scene load_steps=4 format=3 uid="uid://d360ob6y88rs2"]

[ext_resource type="Script" path="res://scenes/aim_bullet/aim_bullet.gd" id="1_yjieq"]
[ext_resource type="Texture2D" uid="uid://3pgoytyc735" path="res://scenes/aim_bullet/aim_bullet.png" id="2_1aavi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdqm6"]
size = Vector2(64, 16)

[node name="aim_bullet" type="Area2D"]
script = ExtResource("1_yjieq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1aavi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_kdqm6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.5, 2)
scale = Vector2(3.15, 0.8)

[node name="aiming_area" type="Area2D" parent="."]
position = Vector2(73, -32)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="aiming_area"]
position = Vector2(-32, 31)
polygon = PackedVector2Array(-40, 2, 87, -29, 86, 50)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="aiming_area" to="." method="_on_aiming_area_body_entered"]
